# rewinder

./: .gitignore  PERFORMANCE_REPORT.md  README.md  RELEASE_HANDOFF.md  package-lock.json  package.json
RewinderApp/: .gitignore  (+4 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  cbindgen.toml  tauri.conf.json
src-tauri/include/: rewinder_ffi.h
src-tauri/native/sck_capture/: AudioOutputProbe.swift  AudioRouteWatcher.swift  CaptureController.swift  CaptureOutput.swift  Main.swift  MicCapturePump.swift  MicrophoneVolumeManager.swift  PipeWriter.swift  Shared.swift  VoiceProcessingMicPump.swift
src-tauri/src/: commands.rs  events.rs  ffi.rs  lib.rs  main.rs
src-tauri/src/buffer/: audio_buffer.rs  mod.rs  snapshot.rs  video_buffer.rs
src-tauri/src/capture/: engine.rs  mod.rs  permissions.rs
src-tauri/src/capture/engine/: log_helpers.rs  log_parsers.rs  process_helpers.rs  replay_runtime.rs  startup_helpers.rs  tests.rs
src-tauri/src/core/: engine.rs  lifecycle.rs  state.rs
src-tauri/src/core/engine/: capture_errors.rs  helpers.rs  permissions_handler.rs  pipeline.rs  process_metrics.rs  profile.rs  recovery.rs  restart_policy.rs  runtime_basics.rs  save_pipeline.rs  save_trigger.rs  settings_patch.rs  state_projection.rs  tests.rs
src-tauri/src/encoding/: audio_encoder.rs  mod.rs  packet.rs  video_encoder.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/settings/: mod.rs  patch.rs  validation.rs
src-tauri/src/sys/: binaries.rs
src-tauri/src/writer/: mod.rs  replay_writer.rs
src-tauri/src/writer/replay_writer/: helpers.rs  integrity.rs  tests.rs
(+94 files in other folders)
