[package]
name = "rewinder"
version = "0.1.0"
description = "Rewinder capture engine (Rust core library, hosted by the native SwiftUI app via FFI)"
authors = ["you"]
edition = "2021"

[lib]
name = "rewinder_lib"
crate-type = ["staticlib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
bytes = "1"
fs2 = "0.4"
